src/objects/CPQ_Pricing_Admin_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting stores admin details of different pricing tools</description>
    <fields>
        <fullName>Approval_Matrix_Country_Field__c</fullName>
        <label>Approval Matrix Country Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_List__c</fullName>
        <description>Used to get label of Attribute</description>
        <label>Attribute Label List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_List2__c</fullName>
        <label>Attribute List2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_List__c</fullName>
        <label>Attribute List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_Percent_Map__c</fullName>
        <description>To store percentage change provided on pricing admin</description>
        <label>Attribute Percent Map</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <description>Used to get Base Currency of Price List</description>
        <label>Base Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <description>To store current running batch job Id to track status for pricing admin</description>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Existing_Year__c</fullName>
        <description>To store pricing year from which new pricing year cloned from</description>
        <label>Cloned From Existing Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Attribute__c</fullName>
        <label>Group Attribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Stored_Migration_Id__c</fullName>
        <label>Last Stored Migration Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Last_Stored_Migration_Id__c</fullName>
        <description>LC-11732: Used to track last inserted migration Id from pricing admin</description>
        <label>Partial Last Stored Migration Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Pricing_Required__c</fullName>
        <description>Used to Indentify If Partial Pricing is Available or not</description>
        <defaultValue>false</defaultValue>
        <label>Partial Pricing Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <label>Permission Set Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Tool__c</fullName>
        <label>Pricing Tool</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Codes1__c</fullName>
        <description>Store the product code for AMESA which has Once DDF</description>
        <label>Product Codes1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Codes2__c</fullName>
        <description>Store the product code for AMESA which has Once DDF.</description>
        <label>Product Codes2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To provide review all option to user on pricing admin feature.</description>
        <label>Review All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Products_Section_Label__c</fullName>
        <description>CPQ-LC-12621: This field stores the Label for Bundle Product Section.</description>
        <label>Bundle Products Section Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>CPQ-LC-14273: This field stores the object name for whick user can configure for a tool.</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_1_Api_Name__c</fullName>
        <description>CPQ-LC-12621: This field stores the Api Name of of the field whose values are to be used under Section 1.</description>
        <label>Section 1 Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_2_Api_Name__c</fullName>
        <description>CPQ-LC-12621: This field stores the Api Name of of the field whose values are to be used under Section 2.</description>
        <label>Section 2 Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_3_Api_Name__c</fullName>
        <description>CPQ-LC-12621: This field stores the Api Name of of the field whose values are to be used under Section 3.</description>
        <label>Section 3 Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ Admin Settings</label>
</CustomObject>